# ollama-backend-template

./: .env  LICENSE  README.md  docker-compose.yml
src/backend/: Dockerfile  pyproject.toml
src/backend/src/: entrypoint.sh  main.py
src/llm_runner/: Dockerfile
src/llm_runner/src/: pull-llm.sh
